# openapi/_bundle.yaml
@@ -22,7 +22,7 @@ paths:
                 - email
                 - password
       responses:
-        "200":
+        '200':
           description: ログイン成功
           content:
             application/json:
@@ -38,7 +38,7 @@ paths:
       operationId: authLogout
       summary: ログアウト
       responses:
-        "200":
+        '200':
           description: ログアウト成功
           content:
             application/json:
@@ -68,7 +68,7 @@ paths:
                 - email
                 - password
       responses:
-        "200":
+        '200':
           description: サインイン成功
           content:
             application/json:
@@ -79,31 +79,180 @@ paths:
                     type: string
                 required:
                   - message
-  /profile:
+  /auth/me:
     get:
-      operationId: getProfile
-      summary: プロフィール取得
+      operationId: authMe
+      summary: 認証情報取得
       responses:
-        "200":
-          description: プロフィール取得成功
+        '200':
+          description: 認証情報取得成功
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  profile:
-                    $ref: "#/components/schemas/Profile"
+                  me:
+                    $ref: '#/components/schemas/AuthMe'
                     nullable: true
+  /admin/users:
+    get:
+      operationId: getAdminUsers
+      summary: ユーザー情報一覧取得
+      parameters:
+        - name: q
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: ユーザー情報一覧取得成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    type: number
+                  page:
+                    type: number
+                  limit:
+                    type: number
+                  users:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/User'
+                required:
+                  - total
+                  - page
+                  - limit
+                  - users
+    post:
+      operationId: postAdminUser
+      summary: 新規ユーザー作成
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                department:
+                  type: string
+                jobTitle:
+                  type: string
+                phone:
+                  type: string
+                email:
+                  type: string
+                joinedOn:
+                  type: string
+                roles:
+                  type: array
+                  items:
+                    type: string
+                    enum:
+                      - user
+                      - admin
+              required:
+                - name
+                - department
+                - phone
+                - email
+                - joinedOn
+                - roles
+      responses:
+        '201':
+          description: 新規ユーザー作成成功
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /admin/users/{id}:
+    put:
+      operationId: putAdminUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                department:
+                  type: string
+                jobTitle:
+                  type: string
+                phone:
+                  type: string
+                email:
+                  type: string
+                joinedOn:
+                  type: string
+                roles:
+                  type: array
+                  items:
+                    type: string
+                    enum:
+                      - user
+                      - admin
+              required:
+                - name
+                - department
+                - phone
+                - email
+                - joinedOn
+                - roles
+      responses:
+        '200':
+          description: ユーザー情報更新成功
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      operationId: deleteAdminUser
+      summary: ユーザー削除
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: ユーザー削除成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
 components:
   schemas:
-    Profile:
+    AuthMe:
       type: object
       properties:
         id:
-          type: integer
+          type: number
         name:
-          type: string
-        email:
           type: string
         roles:
           type: array
@@ -112,16 +261,44 @@ components:
             enum:
               - user
               - admin
-        createdAt:
-          type: string
-          format: date
-        updatedAt:
+        lastLoginAt:
           type: string
           format: date
       required:
         - id
         - name
-        - email
         - roles
-        - createdAt
-        - updatedAt
+        - lastLoginAt
+    User:
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
+        department:
+          type: string
+        jobTitle:
+          type: string
+        phone:
+          type: string
+        email:
+          type: string
+        joinedOn:
+          type: string
+          format: date
+        roles:
+          type: array
+          items:
+            type: string
+            enum:
+              - user
+              - admin
+      required:
+        - id
+        - name
+        - department
+        - phone
+        - email
+        - joinedOn
+        - roles
